--- a/ProcessManager/src/app/data/data.component.html
+++ b/ProcessManager/src/app/data/data.component.html
@@ -1,1 +1,5 @@
-<p>Data</p>
+<h1>Data</h1>
+<div class="container">
+    <p class="text-muted">Process Id: {{procesId()}}</p>
+    <button class="btn btn-primary" (click)="clickChangeProcessId()">Generate new Id</button>
+  </div>
