--- a/ProcessManager/src/app/data/data.component.html
+++ b/ProcessManager/src/app/data/data.component.html
@@ -2,4 +2,5 @@
 <div class="container">
     <p [@pState]="state" class="text-muted">Process Id: {{procesId()}}</p>
     <button class="btn btn-primary" (click)="clickChangeProcessId()">Generate new Id</button>
+    <p>Process Name: {{processName()}}</p>
   </div>
